syntax = "proto3";

package BEE;

message ToRegister{
  string name = 1;
  string type = 2;
  int32 port = 3;
  string ip = 4;
  string group = 5;
  bytes aes = 6;
}